// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnginesManagement operations parseResult with good result returns correct result 1`] = `
Array [
  Object {
    "id": 10,
    "isEnable": true,
    "modifiedAt": 2010-01-30T01:11:00.000Z,
    "name": "Engine 01",
    "scopes": Array [
      "gamme00",
    ],
    "urlTemplate": "stringA01",
  },
  Object {
    "id": 11,
    "isEnable": false,
    "modifiedAt": 2010-01-30T01:11:00.000Z,
    "name": "Engine 11",
    "scopes": Array [
      "gamme10",
      "gamme11",
    ],
    "urlTemplate": "stringA11",
  },
  Object {
    "id": 12,
    "isEnable": false,
    "modifiedAt": 2011-01-30T01:11:00.000Z,
    "name": "Engine 21",
    "scopes": Array [
      "gamme20",
      "gamme21",
      "gamme22",
    ],
    "urlTemplate": "stringA21",
  },
  Object {
    "id": 13,
    "isEnable": true,
    "modifiedAt": 2011-03-02T01:11:00.000Z,
    "name": "Engine 31",
    "scopes": Array [
      "gamme30",
      "gamme31",
      "gamme32",
      "gamme33",
    ],
    "urlTemplate": "stringA31",
  },
  Object {
    "id": 14,
    "isEnable": false,
    "modifiedAt": 2012-03-01T01:11:00.000Z,
    "name": "Engine 41",
    "scopes": Array [
      "gamme40",
      "gamme41",
      "gamme42",
      "gamme43",
      "gamme44",
    ],
    "urlTemplate": "stringA41",
  },
  Object {
    "id": 15,
    "isEnable": false,
    "modifiedAt": 2012-03-01T01:11:00.000Z,
    "name": "Engine 51",
    "scopes": Array [
      "gamme50",
      "gamme51",
      "gamme52",
      "gamme53",
      "gamme54",
      "gamme55",
    ],
    "urlTemplate": "stringA51",
  },
  Object {
    "id": 16,
    "isEnable": true,
    "modifiedAt": 2013-03-30T01:11:00.000Z,
    "name": "Engine 61",
    "scopes": Array [
      "gamme60",
      "gamme61",
      "gamme62",
      "gamme63",
      "gamme64",
      "gamme65",
      "gamme66",
    ],
    "urlTemplate": "stringA61",
  },
  Object {
    "id": 17,
    "isEnable": false,
    "modifiedAt": 2013-03-30T01:11:00.000Z,
    "name": "Engine 71",
    "scopes": Array [
      "gamme70",
      "gamme71",
      "gamme72",
      "gamme73",
      "gamme74",
      "gamme75",
      "gamme76",
      "gamme77",
    ],
    "urlTemplate": "stringA71",
  },
  Object {
    "id": 18,
    "isEnable": false,
    "modifiedAt": 2014-03-30T01:11:00.000Z,
    "name": "Engine 81",
    "scopes": Array [
      "gamme80",
      "gamme81",
      "gamme82",
      "gamme83",
      "gamme84",
      "gamme85",
      "gamme86",
      "gamme87",
      "gamme88",
    ],
    "urlTemplate": "stringA81",
  },
  Object {
    "id": 19,
    "isEnable": true,
    "modifiedAt": 2014-04-30T01:11:00.000Z,
    "name": "Engine 91",
    "scopes": Array [
      "gamme90",
      "gamme91",
      "gamme92",
      "gamme93",
      "gamme94",
      "gamme95",
      "gamme96",
      "gamme97",
      "gamme98",
      "gamme99",
    ],
    "urlTemplate": "stringA91",
  },
  Object {
    "id": 20,
    "isEnable": false,
    "modifiedAt": 2015-04-30T01:11:00.000Z,
    "name": "Engine 101",
    "scopes": Array [
      "gamme100",
      "gamme101",
      "gamme102",
      "gamme103",
      "gamme104",
      "gamme105",
      "gamme106",
      "gamme107",
      "gamme108",
      "gamme109",
      "gamme1010",
    ],
    "urlTemplate": "stringA101",
  },
  Object {
    "id": 21,
    "isEnable": false,
    "modifiedAt": 2015-04-30T01:11:00.000Z,
    "name": "Engine 111",
    "scopes": Array [
      "gamme110",
      "gamme111",
      "gamme112",
      "gamme113",
      "gamme114",
      "gamme115",
      "gamme116",
      "gamme117",
      "gamme118",
      "gamme119",
      "gamme1110",
      "gamme1111",
    ],
    "urlTemplate": "stringA111",
  },
  Object {
    "id": 22,
    "isEnable": true,
    "modifiedAt": 2016-05-30T01:11:00.000Z,
    "name": "Engine 121",
    "scopes": Array [
      "gamme120",
      "gamme121",
      "gamme122",
      "gamme123",
      "gamme124",
      "gamme125",
      "gamme126",
      "gamme127",
      "gamme128",
      "gamme129",
      "gamme1210",
      "gamme1211",
      "gamme1212",
    ],
    "urlTemplate": "stringA121",
  },
  Object {
    "id": 23,
    "isEnable": false,
    "modifiedAt": 2016-05-30T01:11:00.000Z,
    "name": "Engine 131",
    "scopes": Array [
      "gamme130",
      "gamme131",
      "gamme132",
      "gamme133",
      "gamme134",
      "gamme135",
      "gamme136",
      "gamme137",
      "gamme138",
      "gamme139",
      "gamme1310",
      "gamme1311",
      "gamme1312",
      "gamme1313",
    ],
    "urlTemplate": "stringA131",
  },
  Object {
    "id": 24,
    "isEnable": false,
    "modifiedAt": 2017-05-30T01:11:00.000Z,
    "name": "Engine 141",
    "scopes": Array [
      "gamme140",
      "gamme141",
      "gamme142",
      "gamme143",
      "gamme144",
      "gamme145",
      "gamme146",
      "gamme147",
      "gamme148",
      "gamme149",
      "gamme1410",
      "gamme1411",
      "gamme1412",
      "gamme1413",
      "gamme1414",
    ],
    "urlTemplate": "stringA141",
  },
  Object {
    "id": 25,
    "isEnable": true,
    "modifiedAt": 2017-06-30T01:11:00.000Z,
    "name": "Engine 151",
    "scopes": Array [
      "gamme150",
      "gamme151",
      "gamme152",
      "gamme153",
      "gamme154",
      "gamme155",
      "gamme156",
      "gamme157",
      "gamme158",
      "gamme159",
      "gamme1510",
      "gamme1511",
      "gamme1512",
      "gamme1513",
      "gamme1514",
      "gamme1515",
    ],
    "urlTemplate": "stringA151",
  },
  Object {
    "id": 26,
    "isEnable": false,
    "modifiedAt": 2018-06-30T01:11:00.000Z,
    "name": "Engine 161",
    "scopes": Array [
      "gamme160",
      "gamme161",
      "gamme162",
      "gamme163",
      "gamme164",
      "gamme165",
      "gamme166",
      "gamme167",
      "gamme168",
      "gamme169",
      "gamme1610",
      "gamme1611",
      "gamme1612",
      "gamme1613",
      "gamme1614",
      "gamme1615",
      "gamme1616",
    ],
    "urlTemplate": "stringA161",
  },
  Object {
    "id": 27,
    "isEnable": false,
    "modifiedAt": 2018-06-30T01:11:00.000Z,
    "name": "Engine 171",
    "scopes": Array [
      "gamme170",
      "gamme171",
      "gamme172",
      "gamme173",
      "gamme174",
      "gamme175",
      "gamme176",
      "gamme177",
      "gamme178",
      "gamme179",
      "gamme1710",
      "gamme1711",
      "gamme1712",
      "gamme1713",
      "gamme1714",
      "gamme1715",
      "gamme1716",
      "gamme1717",
    ],
    "urlTemplate": "stringA171",
  },
  Object {
    "id": 28,
    "isEnable": true,
    "modifiedAt": 2019-07-30T01:11:00.000Z,
    "name": "Engine 181",
    "scopes": Array [
      "gamme180",
      "gamme181",
      "gamme182",
      "gamme183",
      "gamme184",
      "gamme185",
      "gamme186",
      "gamme187",
      "gamme188",
      "gamme189",
      "gamme1810",
      "gamme1811",
      "gamme1812",
      "gamme1813",
      "gamme1814",
      "gamme1815",
      "gamme1816",
      "gamme1817",
      "gamme1818",
    ],
    "urlTemplate": "stringA181",
  },
]
`;

exports[`EnginesManagement operations parseResult with wrong result returns correct result 1`] = `Array []`;

exports[`EnginesManagement operations parseResult without result returns correct result 1`] = `Array []`;

exports[`EnginesManagement operations saga deleteEngine with failure 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [
          1,
        ],
        "context": null,
        "fn": [Function],
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "SELECT": Object {
        "args": Array [],
        "selector": [Function],
      },
    },
  },
  Object {
    "done": true,
    "value": Object {
      "id": 1,
      "isSuccess": false,
      "name": null,
    },
  },
]
`;

exports[`EnginesManagement operations saga deleteEngine with success 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [
          1,
        ],
        "context": null,
        "fn": [Function],
      },
    },
  },
  Object {
    "done": true,
    "value": Object {
      "id": 1,
      "isSuccess": true,
    },
  },
]
`;

exports[`EnginesManagement operations saga deleteEngines with failure 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "type": "PENDING_REQUEST",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "SELECT": Object {
        "args": Array [],
        "selector": [Function],
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "ALL": Array [
        Object {
          "@@redux-saga/IO": true,
          "CALL": Object {
            "args": Array [
              true,
            ],
            "context": null,
            "fn": [Function],
          },
        },
      ],
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "type": "RESET_PENDING_REQUEST",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": true,
    "value": null,
  },
]
`;

exports[`EnginesManagement operations saga deleteEngines with success 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "type": "PENDING_REQUEST",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "SELECT": Object {
        "args": Array [],
        "selector": [Function],
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "ALL": Array [
        Object {
          "@@redux-saga/IO": true,
          "CALL": Object {
            "args": Array [
              true,
            ],
            "context": null,
            "fn": [Function],
          },
        },
      ],
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "type": "RESET_PENDING_REQUEST",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": true,
    "value": null,
  },
]
`;

exports[`EnginesManagement operations saga fetchEngines 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [],
        "context": null,
        "fn": [Function],
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Array [
            Object {
              "id": 10,
              "isEnable": true,
              "modifiedAt": 2010-01-30T01:11:00.000Z,
              "name": "Engine 01",
              "scopes": Array [
                "gamme00",
              ],
              "urlTemplate": "stringA01",
            },
            Object {
              "id": 11,
              "isEnable": false,
              "modifiedAt": 2010-01-30T01:11:00.000Z,
              "name": "Engine 11",
              "scopes": Array [
                "gamme10",
                "gamme11",
              ],
              "urlTemplate": "stringA11",
            },
            Object {
              "id": 12,
              "isEnable": false,
              "modifiedAt": 2011-01-30T01:11:00.000Z,
              "name": "Engine 21",
              "scopes": Array [
                "gamme20",
                "gamme21",
                "gamme22",
              ],
              "urlTemplate": "stringA21",
            },
            Object {
              "id": 13,
              "isEnable": true,
              "modifiedAt": 2011-03-02T01:11:00.000Z,
              "name": "Engine 31",
              "scopes": Array [
                "gamme30",
                "gamme31",
                "gamme32",
                "gamme33",
              ],
              "urlTemplate": "stringA31",
            },
            Object {
              "id": 14,
              "isEnable": false,
              "modifiedAt": 2012-03-01T01:11:00.000Z,
              "name": "Engine 41",
              "scopes": Array [
                "gamme40",
                "gamme41",
                "gamme42",
                "gamme43",
                "gamme44",
              ],
              "urlTemplate": "stringA41",
            },
            Object {
              "id": 15,
              "isEnable": false,
              "modifiedAt": 2012-03-01T01:11:00.000Z,
              "name": "Engine 51",
              "scopes": Array [
                "gamme50",
                "gamme51",
                "gamme52",
                "gamme53",
                "gamme54",
                "gamme55",
              ],
              "urlTemplate": "stringA51",
            },
            Object {
              "id": 16,
              "isEnable": true,
              "modifiedAt": 2013-03-30T01:11:00.000Z,
              "name": "Engine 61",
              "scopes": Array [
                "gamme60",
                "gamme61",
                "gamme62",
                "gamme63",
                "gamme64",
                "gamme65",
                "gamme66",
              ],
              "urlTemplate": "stringA61",
            },
            Object {
              "id": 17,
              "isEnable": false,
              "modifiedAt": 2013-03-30T01:11:00.000Z,
              "name": "Engine 71",
              "scopes": Array [
                "gamme70",
                "gamme71",
                "gamme72",
                "gamme73",
                "gamme74",
                "gamme75",
                "gamme76",
                "gamme77",
              ],
              "urlTemplate": "stringA71",
            },
            Object {
              "id": 18,
              "isEnable": false,
              "modifiedAt": 2014-03-30T01:11:00.000Z,
              "name": "Engine 81",
              "scopes": Array [
                "gamme80",
                "gamme81",
                "gamme82",
                "gamme83",
                "gamme84",
                "gamme85",
                "gamme86",
                "gamme87",
                "gamme88",
              ],
              "urlTemplate": "stringA81",
            },
            Object {
              "id": 19,
              "isEnable": true,
              "modifiedAt": 2014-04-30T01:11:00.000Z,
              "name": "Engine 91",
              "scopes": Array [
                "gamme90",
                "gamme91",
                "gamme92",
                "gamme93",
                "gamme94",
                "gamme95",
                "gamme96",
                "gamme97",
                "gamme98",
                "gamme99",
              ],
              "urlTemplate": "stringA91",
            },
            Object {
              "id": 20,
              "isEnable": false,
              "modifiedAt": 2015-04-30T01:11:00.000Z,
              "name": "Engine 101",
              "scopes": Array [
                "gamme100",
                "gamme101",
                "gamme102",
                "gamme103",
                "gamme104",
                "gamme105",
                "gamme106",
                "gamme107",
                "gamme108",
                "gamme109",
                "gamme1010",
              ],
              "urlTemplate": "stringA101",
            },
            Object {
              "id": 21,
              "isEnable": false,
              "modifiedAt": 2015-04-30T01:11:00.000Z,
              "name": "Engine 111",
              "scopes": Array [
                "gamme110",
                "gamme111",
                "gamme112",
                "gamme113",
                "gamme114",
                "gamme115",
                "gamme116",
                "gamme117",
                "gamme118",
                "gamme119",
                "gamme1110",
                "gamme1111",
              ],
              "urlTemplate": "stringA111",
            },
            Object {
              "id": 22,
              "isEnable": true,
              "modifiedAt": 2016-05-30T01:11:00.000Z,
              "name": "Engine 121",
              "scopes": Array [
                "gamme120",
                "gamme121",
                "gamme122",
                "gamme123",
                "gamme124",
                "gamme125",
                "gamme126",
                "gamme127",
                "gamme128",
                "gamme129",
                "gamme1210",
                "gamme1211",
                "gamme1212",
              ],
              "urlTemplate": "stringA121",
            },
            Object {
              "id": 23,
              "isEnable": false,
              "modifiedAt": 2016-05-30T01:11:00.000Z,
              "name": "Engine 131",
              "scopes": Array [
                "gamme130",
                "gamme131",
                "gamme132",
                "gamme133",
                "gamme134",
                "gamme135",
                "gamme136",
                "gamme137",
                "gamme138",
                "gamme139",
                "gamme1310",
                "gamme1311",
                "gamme1312",
                "gamme1313",
              ],
              "urlTemplate": "stringA131",
            },
            Object {
              "id": 24,
              "isEnable": false,
              "modifiedAt": 2017-05-30T01:11:00.000Z,
              "name": "Engine 141",
              "scopes": Array [
                "gamme140",
                "gamme141",
                "gamme142",
                "gamme143",
                "gamme144",
                "gamme145",
                "gamme146",
                "gamme147",
                "gamme148",
                "gamme149",
                "gamme1410",
                "gamme1411",
                "gamme1412",
                "gamme1413",
                "gamme1414",
              ],
              "urlTemplate": "stringA141",
            },
            Object {
              "id": 25,
              "isEnable": true,
              "modifiedAt": 2017-06-30T01:11:00.000Z,
              "name": "Engine 151",
              "scopes": Array [
                "gamme150",
                "gamme151",
                "gamme152",
                "gamme153",
                "gamme154",
                "gamme155",
                "gamme156",
                "gamme157",
                "gamme158",
                "gamme159",
                "gamme1510",
                "gamme1511",
                "gamme1512",
                "gamme1513",
                "gamme1514",
                "gamme1515",
              ],
              "urlTemplate": "stringA151",
            },
            Object {
              "id": 26,
              "isEnable": false,
              "modifiedAt": 2018-06-30T01:11:00.000Z,
              "name": "Engine 161",
              "scopes": Array [
                "gamme160",
                "gamme161",
                "gamme162",
                "gamme163",
                "gamme164",
                "gamme165",
                "gamme166",
                "gamme167",
                "gamme168",
                "gamme169",
                "gamme1610",
                "gamme1611",
                "gamme1612",
                "gamme1613",
                "gamme1614",
                "gamme1615",
                "gamme1616",
              ],
              "urlTemplate": "stringA161",
            },
            Object {
              "id": 27,
              "isEnable": false,
              "modifiedAt": 2018-06-30T01:11:00.000Z,
              "name": "Engine 171",
              "scopes": Array [
                "gamme170",
                "gamme171",
                "gamme172",
                "gamme173",
                "gamme174",
                "gamme175",
                "gamme176",
                "gamme177",
                "gamme178",
                "gamme179",
                "gamme1710",
                "gamme1711",
                "gamme1712",
                "gamme1713",
                "gamme1714",
                "gamme1715",
                "gamme1716",
                "gamme1717",
              ],
              "urlTemplate": "stringA171",
            },
            Object {
              "id": 28,
              "isEnable": true,
              "modifiedAt": 2019-07-30T01:11:00.000Z,
              "name": "Engine 181",
              "scopes": Array [
                "gamme180",
                "gamme181",
                "gamme182",
                "gamme183",
                "gamme184",
                "gamme185",
                "gamme186",
                "gamme187",
                "gamme188",
                "gamme189",
                "gamme1810",
                "gamme1811",
                "gamme1812",
                "gamme1813",
                "gamme1814",
                "gamme1815",
                "gamme1816",
                "gamme1817",
                "gamme1818",
              ],
              "urlTemplate": "stringA181",
            },
          ],
          "type": "@ENGINES/SET",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Array [],
          "type": "@ENGINES/SET_SELECTED",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": true,
    "value": undefined,
  },
]
`;
